--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/varunalex/React-Webpack-4-Babel-7-boilerplate/issues"
   },
-  "homepage": "https://github.com/varunalex/React-Webpack-4-Babel-7-boilerplate#readme"
+  "homepage": "https://github.com/varunalex/React-Webpack-4-Babel-7-boilerplate#readme",
+  "dependencies": {
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
+  }
 }
