--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-webpack-4-babel-7-boilerplate",
   "version": "1.0.0",
   "description": "Startup boilerplate of React16.3 + Webpack 4 + Babel 7",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
