Add npm scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Startup boilerplate of React16.3 + Webpack 4 + Babel 7",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server --mode development --config config/webpack.base.config.js --open --hot --history-api-fallback --env.PLATFORM=local --env.VERSION=stag",
+    "prebuild": "webpack --mode production --config config/webpack.prod.config.js --env.PLATFORM=production --env.VERSION=stag --progress",
+    "build": "node server"
   },
   "repository": {
     "type": "git",
