--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,18 @@
 {
+  "parser": "babel-eslint",
+  "plugins": [
+    "react",
+    "jsx-a11y",
+    "import"
+  ],
   "rules": {
+    "no-console": 0
+  },
+  "extends": [
+    "airbnb"
+  ],
+  "env": {
+    "browser": true,
+    "node": true
   }
 }
